# KlassenbuchMagic

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Messages.sh  clear  ecm_uninstall.cmake  klassenbuchmagic.kdev4
.kdev4/: KlassenbuchMagic.kdev4  klassenbuchmagic.kdev4
doc/: CMakeLists.txt  CTestTestfile.cmake  index.docbook
icons/: CMakeLists.txt  CTestTestfile.cmake  hisc-apps-klassenbuchmagic.svgz
lib/: CMakeLists.txt
lib/include/: klasse.h  klassenbuchseite.h  main.h  schueler.h
lib/src/: klasse.cpp  klassenbuchseite.cpp  main.cpp  schueler.cpp
src/: CMakeLists.txt  CTestTestfile.cmake  KlassenbuchMagicSettings.kcfg  KlassenbuchMagicSettings.kcfgc  klassenbuchmagic.cpp  klassenbuchmagic.desktop  klassenbuchmagic.h  klassenbuchmagicViewBase.ui  klassenbuchmagicview.cpp  klassenbuchmagicview.cppxQ2057.new  klassenbuchmagicview.h  main.cpp  settingsView.ui
src/lib/: CMakeLists.txt
src/lib/include/: klasse.h  schueler.h
src/lib/src/: klasse.cpp  klassenbuchseite.cpp  main.cpp
src/logic/: klasse.cpp  klasse.h  klassenbuchseite.cpp  klassenbuchseite.h  main.cpp  main.h  schueler.cpp  schueler.h
